Fixed combobox styles for IE6 (adding an item icon broke the theme).
svn changeset:8033 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/panel/panel.css
+++ b/WebContent/VAADIN/themes/reindeer/panel/panel.css
@@ -58,3 +58,19 @@
 .v-ff2 .v-panel-caption .v-errorindicator  {
 	display: -moz-inline-stack;
 }
+
+/* Light style */
+.v-panel-caption-light,
+.v-panel-nocaption-light {
+	border: none;
+}
+.v-panel-content-light {
+	border: none;
+}
+.v-panel-content-light > div {
+	background: transparent;
+}
+.v-panel-deco-light {
+	height: 0;
+	border: none;
+}
