--- a/WebContent/VAADIN/themes/reindeer/table/table.css
+++ b/WebContent/VAADIN/themes/reindeer/table/table.css
@@ -56,7 +56,8 @@
 .v-table-row-odd {
 	background: #eff0f1;
 }
-.v-table .v-selected {
+.v-table .v-selected,
+.black .v-table .v-selected {
 	background: #4d749f url(../common/img/sel-bg.png) repeat-x; /* We can't include this in the sprite, since we don't know the row height */
 	color: #fff;
 	text-shadow: #3b5a7a 0 1px 0;
@@ -119,6 +120,7 @@
 	-webkit-border-bottom-right-radius: 4px;
 	height: 13px;
 	padding: 4px 30px;
+	color: #222;
 	text-shadow: #fff 0 1px 0;
 	width: 100px;
 	position: relative;
@@ -141,11 +143,8 @@
 .v-contextmenu .gwt-MenuItem-selected .v-on {
 	background-image: url(../common/icons/bullet-white.png); /** sprite-ref: verticals; sprite-margin-top: 4px; sprite-margin-bottom: 5px */
 }
-/* Borderless style */
-.v-table-borderless .v-table-header-wrap,
-.v-table-borderless .v-table-body {
-	border: none;
-}
+
+
 /* Strong style */
 .v-table-strong .v-table-header-wrap {
 	border-color: #2b3033;
@@ -177,4 +176,62 @@
 .v-table-strong .v-table-focus-slot-left,
 .v-table-strong .v-table-focus-slot-right {
 	border-color: #9ca1a5;
+}
+
+
+/* Table on black background (normal style) */
+.black .v-table-header-wrap {
+	border-color: #252729;
+	background-image: url(img/header-bg-black.png); /** sprite-ref: black-verticals; sprite-alignment: repeat */
+	color: #e7eaee;
+	text-shadow: #000 0 -1px 0;
+}
+.black .v-table-resizer {
+	border-right-color: #252729;
+}
+.black .v-table-header-cell-asc .v-table-caption-container {
+	background-image: url(img/asc.png); /** sprite-ref: black-verticals; sprite-alignment: right; sprite-margin-top: 7px; sprite-margin-bottom: 6px; sprite-margin-right: 6px; */
+}
+.black .v-table-header-cell-desc .v-table-caption-container {
+	background-image: url(img/desc.png); /** sprite-ref: black-verticals; sprite-alignment: right; sprite-margin-top: 7px; sprite-margin-bottom: 6px; sprite-margin-right: 6px; */
+}
+.black .v-table-column-selector {
+	background-image: url(img/col-sel-black.png); /** sprite-ref: black-verticals */
+}
+.black .v-table-column-selector:active {
+	background-image: url(img/col-sel-black-pressed.png); /** sprite-ref: black-verticals */
+}
+.black .v-table-header-drag {
+	background-image: url(img/header-bg-black.png); /** sprite-ref: black-verticals; sprite-alignment: repeat */
+	color: #e7eaee;
+	text-shadow: #000 0 -1px 0;
+}
+.black .v-table-focus-slot-left,
+.black .v-table-focus-slot-right {
+	border-color: #9ca1a5;
+}
+.black .v-table-body {
+	border-color: #252729;
+	background: transparent;
+}
+.black .v-table-cell-content {
+	border-right-color: #252729;
+	border-bottom: 1px solid #252729;
+}
+.black .v-table-cell-wrapper {
+	padding-bottom: 2px;
+}
+.black .v-table-row-odd {
+	background: transparent;
+}
+/* Selection background-color combined with default style selector, so we don't have to duplicate the sprite image in the final sprite collection */
+.black .v-table .v-selected .v-table-cell-content {
+	border-bottom: 1px solid #4d749f;
+}
+
+
+/* Borderless style */
+.v-table-borderless .v-table-header-wrap,
+.v-table-borderless .v-table-body {
+	border: none;
 }
